[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false
strip = "debuginfo"

[workspace]
members = [
    "ratchet_rs",
    "ratchet_core",
    "ratchet_deflate",
    "ratchet_ext",
    "ratchet_fixture"
]
